[package]
name = "options-listener"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
options = { path = "../options" }
processing-listener = { path = "../processing-listener" }
tokio = { version = "1", features = ["full"] }
rayon = "1.5.3"
chrono = "0.4.19"