[package]
name = "options-listener"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "options_listener"
path = "src/main.rs"

[dependencies]
options = { git = "https://github.com/adaptive-alexander/options.git" }
processing-listener = { git = "https://github.com/adaptive-alexander/processing_listener.git"}
tokio = { version = "1", features = ["full"] }
rayon = "1.5.3"
chrono = "0.4.19"
